--- a/wiimote/package.xml
+++ b/wiimote/package.xml
@@ -26,7 +26,6 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>cwiid-dev</build_depend>
-  <build_depend>message_generation</build_depend>
   <build_depend>roslint</build_depend>
 
   <depend>geometry_msgs</depend>
@@ -39,7 +38,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>wiimote_msgs</depend>
 
   <exec_depend>cwiid</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
 </package>
